k8s/coreapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreapi-deployment
spec:
  selector:
    matchLabels:
      app: dln
      tier: coreapi-pod
      track: stable
  replicas: 2
  template:
    metadata:
      labels:
        app: dln
        tier: coreapi-pod
        track: stable
    spec:
      containers:
      - name: coreapi-container
        image: coreapi:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 80
