k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: react-docker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-docker
  template:
    metadata:
      labels:
        app: react-docker
    spec:
      containers:
        - name: react-docker
          image: reactapp:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 80
      restartPolicy: Always
