k8s/coreapi-nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: coreapi-port
  labels:
    app: coreapi-deployment
    tier: coreapi-port
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 32000
  selector:
    app: coreapi-deployment
