k8s/coreapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coreapi-service
spec:
  type: ClusterIP
  selector:
    app: coreapi-deployment
    tier: coreapi-pod
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
