k8s/load-balancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: load-balancer
  labels:
    app: load-balancer
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    - port: 8037
      targetPort: 80
      protocol: TCP
      nodePort: 32000
  selector:
    app: react-docker
