k8s/reactapp-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactapp-loader
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: reactapp-service
