k8s/reactapp-nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: reactapp-port
  labels:
    app: reactapp-development
    tier: reactapp-port
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 31000
  selector:
    app: reactapp-deployment
