k8s/reactapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactapp-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: reactapp-deployment
    tier: reactapp-pod
  type: ClusterIP
