k8s/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreapi-deployment
spec:
  selector:
    matchLabels:
      app: coreapi-pod
  replicas: 2
  template:
    metadata:
      labels:
        app: coreapi-pod
    spec:
      containers:
        - name: coreapi-container
          image: coreapi:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
    name: coreapi-service
spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
        app: coreapi-pod
    type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: coreapi-ingress
spec:
    rules:
    - http:
        paths:
        - path: /demo
          pathType: Prefix
          backend:
            service:
              name: coreapi-service
              port:
                number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactapp-deployment
spec:
  selector:
    matchLabels:
      app: reactapp-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: reactapp-pod
    spec:
      containers:
        - name: reactapp-container
          image: reactapp:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP           
---
apiVersion: v1
kind: Service
metadata:
    name: reactapp-service
spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
        app: reactapp-pod
    type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: demo-ingress
spec:
    rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: reactapp-service
              port:
                number: 80
