k8s/reactapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reactapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  defaultBackend:
    service:
      name: coreapi-service
      port:
        number: 80
  rules:
  - host: hello-test.internal
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: reactapp-service
            port:
              number: 80
      - path: /api/*
        pathType: Prefix
        backend:
          service:
            name: coreapi-service
            port:
              number: 80
